--- a/comp/sass/base/_contentsArea.scss
+++ b/comp/sass/base/_contentsArea.scss
@@ -1,68 +1,64 @@
 .contentsArea {
-  &__time {
-    margin: 10px auto;
-    overflow: hidden;
-    span {
-      flex: 1;
-      width: 50%;
-      float: left;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 31px;
-      letter-spacing: 1px;
-      &:nth-of-type(1) {
-        font-size: 21px;
-        background-color: $secondary__pink;
-        color: $base__white;
-        font-weight: 700;
-        padding: 0 0 2px;
-      }
-      &:nth-of-type(2) {
-        background-color: $base__white;
-        border: 1px solid $secondary__pink;
-        color: $secondary__pink;
-        font-size: 14px;
-        flex-wrap: wrap;
-        font-weight: 700;
-      }
+  text-align: center;
+  a{
+    display:block;
+  }
+  li {
+    border: solid 1px #d7d7d7;
+    margin-bottom: 3em;
+  }
+  &__image{
+    position:relative;
+    &:before{
+      content: "";
+      display: block;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    &.new:before {background-image: url("http://placehold.jp/10/3d4070/ffffff/40x40.png?text=%E3%81%AB%E3%82%85%E3%83%BC");}
+    &.commingsoon:before {background-image: url("http://placehold.jp/10/eb1730/ffffff/40x40.png?text=%E3%81%8B%E3%81%BF%E3%81%99");}
+  }
+  &__title{
+    color:$primary__green;
+    font-weight: 700;
+    font-size: 24px;
+    border-bottom:2px solid $positiveColor__01;
+    margin: auto;
+    width: 70%;
+    padding: 0.4em 0em;
+  }
+  &__comment{
+    padding:1em 0em 0em 0em;
+    color:$middleColor__01;
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: 700;
+  span{
+    display:block;
+    color:$positiveColor__01;
+    text-decoration: underline;
+    padding: 1em 0em;
+    position: relative;
+    width: 29%;
+    margin: auto;
+    &:after {
+      content: "";
+      display: block;
+      width: 5px;
+      height: 5px;
+      border-top: 2px solid $positiveColor__01;
+      border-right: 2px solid $positiveColor__01;
+      transform: rotate(45deg);
+      position: absolute;
+      bottom: 1.5em;
+      right: 0;
+      margin: auto;
     }
   }
-  &__guide {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px auto;
-    li {
-      width: 50%;
-    }
-    a {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      height: 42px;
-      font-size: 14px;
-      color: #585858;
-      font-weight: 700;
-      padding-left: 28px;
-      background-image: url(../asset/dummy/top-chedule_icon01.png);
-      background-repeat: no-repeat;
-      background-position: 0 50%;
-      background-size: 26px;
-      position: relative;
-      &:after {
-        content: "";
-        display: block;
-        width: 7px;
-        height: 7px;
-        border-top: 2px solid #8cc63f;
-        border-right: 2px solid #8cc63f;
-        transform: rotate(45deg);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 2%;
-        margin: auto;
-      }
-    }
+  
   }
+
 }
