--- a/comp/sass/base/_base.scss
+++ b/comp/sass/base/_base.scss
@@ -4,6 +4,19 @@
   font-family: 'din_l';
   src: url('DINbek-Light.ttf') format('ttf');
 }
+@font-face {
+  font-family: 'din_l';
+  src: url('DINbek-Light.ttf') format('ttf');
+}
+@font-face {
+  font-family: 'din_l';
+  src: url('DINbek-Light.ttf') format('ttf');
+}
+@font-face {
+  font-family: 'din_l';
+  src: url('DINbek-Light.ttf') format('ttf');
+}
+
 
 body {
   font-family: 'Noto Sans Japanese', sans-serif;
