--- a/comp/sass/base/_scheduleArea.scss
+++ b/comp/sass/base/_scheduleArea.scss
@@ -47,7 +47,7 @@
       color: #585858;
       font-weight: 700;
       padding-left: 28px;
-      background-image: url(../asset/dummy/top-chedule_icon01.png);
+      background-image: url(/wp-content/uploads/2017/11/ico_access.png);
       background-repeat: no-repeat;
       background-position: 0 50%;
       background-size: 26px;
