--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -25,67 +25,71 @@ header {
     width: 100%;
     background: #ccc;
     display: none;
+    z-index: 10;
     &.js-menuNav__active {display: block;}
   }
 }
 
-.headerBtn{
-  position: absolute;
-  right: 3%;
+.headerBtn {
+  position: fixed;
+  right: 0;
   top: 0;
-  bottom: 0;
   margin: auto;
-  width: 24px;
-  height: 24px;
-  transition: all .4s;
+  width: 50px;
+  height: 50px;
+  background-color: $secondary__pink;
+  z-index: 100;
   &__open {
-    height: 24px;
-    width: 24px;
-    position: relative;
+    height: 23px;
+    width: 23px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
     transition: all .4s;
-    &:before, span,&:after {
-      content: "";
+    span {
       width: 100%;
       height: 3px;
       display: inline-block;
       background-color: #fff;
       border-radius: 1.5px;
       position: absolute;
-      top: 0;
       bottom: 0;
       margin: auto;
       transition: all .4s;
+      &:first-child {top: 18px;}
+      &:nth-of-type(2){top: 0px;}
+      &:last-child {bottom: 18px;}      
     }
-    &:before {top: 18px;}
-    &:after {bottom: 18px;}
   }
 }
 
 
 
-.headerBtn__open:before {animation: menu-bar02 .75s forwards;}
+.headerBtn__open.js-headerBtn__action span:first-child {animation: menu-bar02 .75s forwards;}
 @keyframes menu-bar02 {
   0% {transform: translateY(-9px) rotate(45deg);}
   50% {transform: translateY(-9px) rotate(0);}
   100% {transform: translateY(0) rotate(0);}
 }
-.headerBtn__open span {transition: all .25s .25s;opacity: 1;}
-.headerBtn__open:after {animation: menu-bar01 .75s forwards;}
+.headerBtn__open.js-headerBtn__action span:nth-of-type(2) {transition: all .25s .25s;opacity: 1;}
+.headerBtn__open.js-headerBtn__action span:last-child {animation: menu-bar01 .75s forwards;}
 @keyframes menu-bar01 {
   0% {transform: translateY(9px) rotate(-45deg);}
   50% {transform: translateY(9px) rotate(0);}
   100% {transform: translateY(0) rotate(0);}
 }
 
-
-.headerBtn__open.js-headerBtn__active:before {animation: active-menu-bar03 .75s forwards;}
+.headerBtn__open.js-headerBtn__active span:first-child {animation: active-menu-bar03 .75s forwards;}
 @keyframes active-menu-bar03 {
   0% {transform: translateY(0) rotate(0);}
   50% {transform: translateY(-9px) rotate(0);}
   100% {transform: translateY(-9px) rotate(-45deg);}
 }
-.headerBtn__open.js-headerBtn__active span {opacity: 0;}
-.headerBtn__open.js-headerBtn__active:after {animation: active-menu-bar01 .75s forwards;}
+.headerBtn__open.js-headerBtn__active span:nth-of-type(2) {opacity: 0;}
+.headerBtn__open.js-headerBtn__active span:last-child {animation: active-menu-bar01 .75s forwards;}
 @keyframes active-menu-bar01 {
   0% {transform: translateY(0) rotate(0);}
   50% {transform: translateY(9px) rotate(0);}
