--- a/comp/sass/base/_video.scss
+++ b/comp/sass/base/_video.scss
@@ -14,6 +14,7 @@ video {
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
   }
   img {
     width: 70%;
