--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -7,7 +7,10 @@
 @import "base/_contentsArea";
 @import "base/_snsShareArea";
 @import "base/_eventReport";
+@import "base/_access";
+@import "base/_faq";
 @import "base/_footer";
+
 
 
 
