--- a/comp/sass/base/_eventReport.scss
+++ b/comp/sass/base/_eventReport.scss
@@ -1,9 +1,9 @@
 .eventReport{
-  ul{
+ul{
     display:flex;
     justify-content:space-around;
 }
-    &__img{
+&__img{
       border: 1px solid #979797;
       border-bottom:none;
       a{
@@ -11,23 +11,30 @@
         font-size: 13px;
         color: #1e0111;
       }
-    }
-    &__report{
+}
+&__report{
       border: 1px solid #979797;
+      position:relative;
       &::before{
-        width: 10px;
-        height: 10px;
-        border: 80px solid transparent;
-        border-top: 80px solid #f00;
+        content: "";
+        display: block;
+        position: absolute;
+        left: 1.2em;
+        top: 0;
+        bottom: 0;
+        border: 8px solid transparent;
+        border-top: 8px solid $secondary__pink;
+        transform: rotate(270deg);
       }
       a{
         color: #1e0111;
         font-size: 13px;
-        display:block;
+        display: block;
+        padding: 0.6em 0.6em 0.6em 1.6em;
       }
-    }
+}
 
-  &__Inquiry{
+&__Inquiry{
     a{
       display:block;
       text-decoration: underline;
@@ -36,7 +43,7 @@
       margin:1em 0em;
       font-size: 14px;
     }
-  }
+}
 
 
 
