--- a/comp/sass/base/_header.scss
+++ b/comp/sass/base/_header.scss
@@ -17,16 +17,22 @@ header {
     }
   }
   nav {
-    position: absolute;
+    position: fixed;
     left: 0;
-    top: 50px;
+    right: 0;
+    top: -100%;
     padding: 24px;
     margin: auto;
     width: 100%;
     background: #ccc;
-    display: none;
     z-index: 10;
-    &.js-menuNav__active {display: block;}
+    transition: all 300ms 0s ease;
+    height: 100%;
+    &.js-menuNav__active {
+      display: block;
+      top: 0;
+      transform: translateY(0);
+    }
   }
 }
 
