--- a/comp/sass/style.scss
+++ b/comp/sass/style.scss
@@ -20,3 +20,13 @@
     margin: 0 auto;
   }
 }
+
+@media screen and (max-width: 374px) {
+  .eventReport__report a {
+    font-size: 0.8em;
+    padding: 0.6em 0.6em 0.6em 1.6em;
+}
+.eventReport__report::before {
+  left: 1em;
+}
+}
