--- a/comp/sass/base/_eventReport.scss
+++ b/comp/sass/base/_eventReport.scss
@@ -41,6 +41,7 @@
       background-size: 12px;
       background-repeat: no-repeat;
       background-position: 10px 50%;
+      font-weight: 700;
     }
   }
 
@@ -52,6 +53,7 @@
       text-align: center;
       margin:1em 0em;
       font-size: 14px;
+      font-weight: 700;
     }
   }
 
