--- a/comp/sass/base/_reflectionArea.scss
+++ b/comp/sass/base/_reflectionArea.scss
@@ -10,6 +10,7 @@
     bottom: 0;
     margin: auto;
     width: 22%;
+    z-index: 20;
   }
 }
 &__movieIcon{
@@ -20,11 +21,11 @@
 video::-internal-media-controls-download-button {
   display:none;
  }
- 
+
  video::-webkit-media-controls-enclosure {
   overflow:hidden;
  }
- 
+
  video::-webkit-media-controls-panel {
   width: calc(100% + 30px); /* Adjust as needed */
  }
