--- a/comp/sass/base/_footer.scss
+++ b/comp/sass/base/_footer.scss
@@ -1,59 +1,64 @@
-footer{
+footer {
   text-align: center;
   background: #f4f4f4;
   h4 {
+    max-width: 686px;
     font-size: 18px;
     color: #141414;
-    margin-bottom: 14px;
+    margin: 0 auto 14px;
   }
-  .footer {
-    &__links{
-      padding:0px 16px;
-      ul {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: flex-start;
-        li {width: 31%;
-          margin-right: 2%;
-          &:nth-child(2){display:none;}
-          a {
-            display:block;
-            img{padding-bottom: 0.5em;}
-          }
+}
+
+.footer {
+  &__links{
+    padding:0px 16px;
+    ul {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: flex-start;
+      li {
+        width: 31%;
+        margin-right: 2%;
+        &:nth-child(2){display:none;}
+        a {
+          display:block;
+          img{padding-bottom: 0.5em;}
         }
       }
     }
-    &__followUsIcon {
-      padding:0px 16px 24px;
-      ul {
-        display: flex;
-        justify-content:space-around;
-        margin: 1em;
-      }
-      p {
-        border-bottom: dotted 3px #666666;
-        padding-top: 1em;
-        margin-bottom: 1em;
-      }
+  }
+  &__followUsIcon {
+    padding:0px 16px 24px;
+    ul {
+      display: flex;
+      justify-content:space-around;
+      margin: 1em;
     }
-    &__followUsCaption {
-      margin-bottom: 14px;
+    p {
+      border-bottom: dotted 3px #666666;
+      padding-top: 1em;
+      margin-bottom: 1em;
     }
-    &__comment {
-      padding:1em;
-      p{
-        color: #141414;
-        font-size: 10px;
-      }
+  }
+  &__followUsCaption {
+    margin-bottom: 14px;
+    text-align: center;
+    margin-top: 14px;
+  }
+  &__comment {
+    padding:1em;
+    p{
+      color: #141414;
+      font-size: 10px;
     }
+  }
 
-    &__copyRight {
-      line-height: 40px;
-      background:$secondary__pink;
-      color:$base__white;
-      font-size: 12px;
-      font-weight: 700;
-    }
+  &__copyRight {
+    line-height: 40px;
+    background:$secondary__pink;
+    color:$base__white;
+    font-size: 12px;
+    font-weight: 700;
   }
 }
   //これがfooterの閉じタグ！
